# TheNet

./: .gitmodules  README.md  Synopsis - The Net.docx  package-lock.json
Docs/: Features.md  Techstack.md
backend/: .gitignore  CMakeLists.txt
backend/dependencies/: CMakeLists.txt
backend/howto/: howto.txt
backend/src/: CMakeLists.txt  main.cpp
backend/src/config/: ENV.h
backend/src/models/: CMakeLists.txt  db.h  note_model.h  user_model.h
backend/src/routes/: CMakeLists.txt  routes.h
backend/src/routes/note/: note_routes.h
backend/src/routes/user/: CMakeLists.txt  user_routes.cpp  user_routes.h
backend/src/utilities/: errors.h  utility.h  uuid.h
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/assets/scss/settings/sections/: card.css
frontend/src/components/elements/: Button.js
frontend/src/components/layout/: Footer.js  Header.js
frontend/src/components/layout/partials/: FooterNav.js  FooterSocial.js
frontend/src/components/sections/: Cta.js  FeaturesSplit.js  FeaturesTiles.js  Hero.js  Testimonial.js
frontend/src/config/: firebase.js
frontend/src/layouts/: LayoutDefault.js
frontend/src/views/: Card.js
